--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "the-plain-gatsby-starter",
+  "name": "gatsby-starter-cv",
   "private": true,
-  "description": "A simple minimalist starter for your personal blog",
-  "version": "0.1.0",
-  "author": "Kinyanjui Wangonya <kwangonya@gmail.com>",
+  "description": "A simple starter to get up and developing your digital curriculum with GatsbyJS",
+  "version": "0.0.1",
+  "author": "Francisco Santos <yoshi.df@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.5.7",
-    "gatsby-image": "^2.1.0",
-    "gatsby-plugin-feed": "^2.2.1",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.1",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-remark-prismjs": "^3.2.9",
-    "gatsby-source-filesystem": "^2.0.37",
-    "gatsby-transformer-remark": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.1.19",
-    "node-sass": "^4.12.0",
-    "prismjs": "^1.16.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
-  },
-  "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.13.0",
-    "prettier": "^1.17.1"
+    "@loadable/component": "5.12.0",
+    "babel-plugin-styled-components": "1.10.6",
+    "framer-motion": "1.11.0",
+    "gatsby": "2.23.3",
+    "gatsby-image": "2.4.7",
+    "gatsby-plugin-google-analytics": "2.3.4",
+    "gatsby-plugin-manifest": "2.4.11",
+    "gatsby-plugin-offline": "3.2.9",
+    "gatsby-plugin-react-helmet": "3.3.4",
+    "gatsby-plugin-sharp": "2.6.11",
+    "gatsby-plugin-styled-components": "3.3.4",
+    "gatsby-source-filesystem": "2.3.11",
+    "gatsby-transformer-sharp": "2.5.5",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-awesome-styled-grid": "3.0.7",
+    "react-dom": "16.12.0",
+    "react-helmet": "5.2.1",
+    "react-icons": "3.10.0",
+    "react-switch": "5.0.1",
+    "simple-json-fetch": "1.0.1",
+    "styled-components": "5.1.1"
   },
   "keywords": [
-    "gatsby",
-    "minimal",
-    "minimalist"
+    "gatsby"
   ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "format": "prettier --write \"src/**/*.js\"",
+    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+  },
+  "devDependencies": {
+    "gh-pages": "2.2.0",
+    "prettier": "1.19.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wangonya/the-plain-gatsby"
+    "url": "https://github.com/santosfrancisco/gatsby-starter-cv"
   },
   "bugs": {
-    "url": "https://github.com/wangonya/the-plain-gatsby/issues"
+    "url": "https://github.com/santosfrancisco/gatsby-starter-cv/issues"
   }
 }
